Fixed the hero spacing

--- a/src/styles/Style.scss
+++ b/src/styles/Style.scss
@@ -725,6 +725,9 @@ footer {
    transform: translate(-50%, -50%);
    width: calc(var(--title-size) * 7);
    max-width: 90%;
+   display: flex;
+   flex-direction: column;
+   gap: 1rem;
 }
 
 .section-home-header .logo-gosim-scroll .logo-tracker {
@@ -779,12 +782,11 @@ footer {
 @media screen and (max-width: 860px) {
 
    .section-home-header .event-facts {
-      position: absolute;
-left: 0%;
-      transform: translateY(calc(-50% + calc(var(--title-size) * 1.25)));
-      height: 2em;
+      left: 0%;
       font-size: 1.25rem;
-      gap: 1rem;
+      display: flex;
+      gap: 0;
+      flex-direction: column;
    }
 
    .section-home-header .btn {
